# sanipro-cli

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/lint/: __init__.py
src/saniprocli/: abc.py  cli_hooks.py  cli_runner.py  color.py  commands.py  console.py  inputs.py  logger.py  sanipro_argparse.py  textutils.py
src/saniproclidemo/: cli.py  cli2.py  demo_runner.py  parserv2.py  set-operation.py  tfind.py
tests/: test_cli.py  test_color.py  test_textutils.py  test_tfind.py
