[tool.poetry]
name = "saniprocli"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sanipro = {git = "https://github.com/froggie3/sanipro.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
